tests/rosetta/out/Zig/bitmap-ppm-conversion-through-a-pipe.error
zig build: exit status 1
/tmp/bitmap-ppm-conversion-through-a-pipe.zig:121:13: error: local variable 'x' shadows local variable from outer scope
/tmp/bitmap-ppm-conversion-through-a-pipe.zig:105:9: note: previous declaration here
